# ffmpeg_learn

AudioCapture/: CMakeLists.txt  main.cpp
RTSP/: AudioCapture.cpp  AudioCapture.h  AudioEncode.cpp  AudioEncode.h  CMakeLists.txt  CommonLooper.cpp  CommonLooper.h  PacketQueue.cpp  PacketQueue.h  PushStream.cpp  PushStream.h  PushTime.cpp  PushTime.h  PushWorker.cpp  PushWorker.h  RtspPusher.cpp  RtspPusher.h  VideoCapture.cpp  VideoCapture.h  VideoEncode.cpp  VideoEncode.h  common.h  ffmpeg.h  logger.h  main.cpp
VideoCapture/: CMakeLists.txt  main.cpp
ffmpeg5.1/lib/: libavdevice.59.7.100.dylib  libavfilter.8.44.100.dylib  libpostproc.56.6.100.dylib
ffmpeg5.1/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc
yuv_to_h264/: CMakeLists.txt  main.cpp
